Add more details

--- a/src/content/other/about.mdx
+++ b/src/content/other/about.mdx
@@ -1,5 +1,7 @@
-Spectre is a terminal-inspired theme for Astro!
+Senior software developer with 5+ years of experience building products that solve real problems. I'm product-minded—obsessed with shipping stable, well-crafted software at a pace that matters.
 
-It features a sleek dark-mode aesthetic, various social features inspired by Neocities, perfect lighthouse scores, full keyboard accessibility, comments powered by [giscus](https://giscus.app), a search powered by [pagefind](https://pagefind.app) and more!
+I thrive on learning new technologies, languages, and paradigms. Whether it's exploring a new framework or diving deep into systems programming, curiosity drives my craft.
 
-If you want to dive deeper, check out the example project, and if you want to get started, check out the blog post!
+My toolkit leans heavily into terminal-first, keyboard-driven workflows. I experiment with NixOS for reproducible environments, live in Neovim, and believe the fastest path between thought and code is through the keyboard. And yes, most of this happens with a cup of coffee nearby ☕
+
+When I'm not coding, I'm probably tinkering—building something, breaking something, or figuring out how things work.
